# gateway

./: .gitignore  CMakeLists.txt  cds_http.cc  cds_http.h  chat_message.h  common.h  gateway.cc  gateway.h  vdi_gateway
agent/: CMakeLists.txt  agent.cc  cds_http.cc  cds_http.h  common.h  contd.service  control_agent  out  vds_ca
lxc-monitor/: CMakeLists.txt  lxc-monitor.cc
lxd-monitor/: test.py
monitor/: CMakeLists.txt  monitor  monitor.cc
rx/: CMakeLists.txt  rx.cc  vdi_rx
tx/: CMakeLists.txt  tx.cc  vdi_tx
util/: CMakeLists.txt  monitor  util.cc
